assets/styles/categories.css
.grid-4 {
	margin-left: 20px;
	float: left;
	width: 300px;
}

.grid-8 {
	margin-left: 20px;
	float: left;
	width: 620px;
}

.grid-4.first,
.grid-8.first {
	margin-left: 0;
}

.tip {
	border-top: 1px solid #DDD;
	padding: 20px 0 20px 25px;
}

.tip {
	color: #888;
}

	.tip h4 {
		font-size: 13px;
		margin-bottom: 10px;
		text-transform: uppercase;
	}

	.tip p {
		font-size: 12px;
		line-height: 17px;
	}
	
.categories-list {
	border-bottom: 1px solid #DDD;
	margin-bottom: 30px;
}

.categories-list li {
	border-top: 1px solid #DDD;
	height: 50px;
	position: relative;
	overflow: hidden;
}

.categories-list li:hover {
	background: #F5F5F5;
}

.categories-list .ui-button-add {
	display: none;
	position: absolute;
	height: 30px;
	width: 30px;
	padding: 0;
	top: 9px;
	left: 10px;
} 

	.categories-list li:hover .ui-button-add {
		display: block;
	}

	.categories-list li:hover .ui-button-add img {
		position: absolute;
		top: 7px;
		left: 8px;
	}

.categories-list li .controls {
	float: right;
	display: none;
	position: absolute;
	top: 12px;
	right: 15px;
}
	.categories-list li .controls em {
		color: #bbb;
	}
	
	.categories-list li .controls a {
		margin-left: 6px;
	}
	
	.categories-list li .controls a.left-join {
		margin-left: -5px;
	}
	
	.categories-list .controls .delete {
		position: relative;
		height: 24px;
		padding: 0;
		width: 26px;
		margin-bottom: -9px;
	}
	
	.categories-list .controls .delete img {
		position: absolute;
		top: 5px;
		left: 7px;
	}

.categories-list li .title {
	position: absolute;
}

.categories-list li .title:hover {
	background: #FFFFCC;
}

.categories-list li .children-count {
	color: #BBB;
	font-size: 17px;
	right: 25px;
	position: absolute;
	text-align: right;
	top: 13px;
	width: 40px;
	line-height: 25px;
}

.categories-list li:hover .children-count {
	display: none;
}

.categories-list li.level-0 .title {
	color: #666;
	font-size: 20px;
	line-height: 26px;
	top: 11px;
	max-width: 360px;
}

.categories-list li.level-1 .title {
	color: #444;
	line-height: 22px;
	left: 55px;
	font-size: 16px;
	top: 13px;
	max-width: 250px;
}

.categories-list li.level-2 {
	background-image: url('/images/shared/categories/dash.gif');
	background-position: 55px 20px;
	background-repeat: no-repeat;
}

.categories-list li.level-2 .title {
	color: #777;
	line-height: 20px;
	left: 120px;
	font-size: 14px;
	top: 15px;
	max-width: 185px;
}

.categories-list li:hover .controls {
	display: block;
}

.delete-confirm {
	display: none;
	background: url(/images/shared/categories/bg-delete.png) repeat;
	position: fixed;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
}

	.delete-confirm .ui-button {
		-webkit-box-shadow: none;
		-moz-box-shadow: none;
	}

	.delete-confirm p {
		color: #FFF;
		float: left;
		height: 50px;
		width: 340px;
		margin-right: 30px;
		padding: 11px 0 0 12px;
	}

	.delete-confirm p small {
		display: block;
		font-size: 11px;
	}

	.delete-confirm .ui-button {
		margin-top: 12px;
	}
	
	.delete-confirm .wrapper {
		height: 50px;
		width: 570px;
		position: absolute;
		top: 50%;
		left: 50%;
		margin-left: -285px;
		margin-top: -25px;
	}
	
.categories-list li.level-1-form form {
	margin-left: 50px;
	margin-top: 11px;
}

	.categories-list li.level-1-form input {
		color: #444;
		font-size: 16px;
		height: 19px;
		line-height: 24px;
	}

.categories-list li.level-2-form {
	background-image: url('/images/shared/categories/dash.gif');
	background-position: 55px 20px;
	background-repeat: no-repeat;
}

	.categories-list li.level-2-form form {
		margin-left: 115px;
		margin-top: 10px;
	}
	
	.categories-list li.level-2-form input {
		color: #777;
		font-size: 14px;
		height: 18px;
		line-height: 24px;
	}

